--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/images/title_icon.png">
+    <!-- <a target="_blank" href="https://icons8.com/icon/k8PYrNhbaFCJ/asia">Asia</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
 
     {% block title %}{% endblock title %}
 
@@ -21,17 +23,6 @@
 </head>
     <body>    
         <div id="root">
-
-            <div class="container">
-                <div class="text">
-                    <h1>Loading ...</h1>
-                </div>
-                <div class="loading">
-                    <div class="line_box">
-                        <div class="line"></div>
-                    </div>
-                </div>
-            </div>
 
             <div class="overlay"></div>
 
