--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,17 @@
             </div>
         </div>
     </header>
+    <main>
+        
+    </main>
 
-    <main></main>
+    <div class="loader">
+        <div class="loader_text">0%</div>
+        <span class="loaderCircle"></span>
+    </div>
 {% endblock content %}
 
 {% block js %}
+    <script src="/JS/auth.js"></script>
     <script src="/JS/index.js"></script>
-    <script src="/JS/login.js"></script>
 {% endblock js %}
