--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -10,10 +10,13 @@
 {% endblock css %}
 {% block content %}
     <div class="booking_message">
-        <img class="booking_message_close_button" src="/images/icon_close.png" alt="close_button">
-        <div class="booking_message_title"></div>
-        <button class="booking_message_button" href="/booking">前往查看訂單</button>
+        <div class="booking_message_box">
+            <img class="booking_message_close_button" src="/images/icon_close.png" alt="close_button">
+            <div class="booking_message_title"></div>
+            <button class="booking_message_button" href="/booking">前往查看訂單</button>
+        </div>
     </div>
+
     <main>
         <section class="top">
             <div class="left">
