--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,8 @@
                 </div>
             </nav>
 
-            <div class="signIn">
+            <div class="auth">
+                <div class="signIn">
                 <h2 class="signIn_title">登入會員帳號</h2>
                 <img class="login_icon_close" src="/images/icon_close.png" alt="">
                 <input class="signIn_input signIn_email" type="email" name="email" placeholder="請輸入電子信箱">
@@ -78,6 +79,8 @@
                 <div class="signUp_response_message"></div>
                 <div class="signUp_change_message">已經有帳戶了？點此登入</div>
             </div>
+        
+        </div>
 
             <div id="top_btn">↑</div>
             
