--- a/templates/booking.html
+++ b/templates/booking.html
@@ -80,11 +80,13 @@
     </main>
 
     <div class="check_delete">
-        <img class="check_delete_close_button" src="/images/icon_close.png" alt="close_button">
-        <div class="title">確定刪除?</div>
-        <div class="check_button">
-            <button class="cancel">取消</button>
-            <button class="checked">刪除</button>
+        <div class="check_delete_box">
+            <img class="check_delete_close_button" src="/images/icon_close.png" alt="close_button">
+            <div class="title">確定刪除?</div>
+            <div class="check_button">
+                <button class="cancel">取消</button>
+                <button class="checked">刪除</button>
+            </div>
         </div>
     </div>
     
