--- a/static/CSS/attraction.css
+++ b/static/CSS/attraction.css
@@ -286,26 +286,35 @@ main > .bottom > .map{
 
 /* booking message */
 .booking_message{
+    width: 100%;
+
+    position: fixed;
+    top: 5rem;
+    z-index: 10;
+
+    display: grid;
+}
+
+.booking_message_box{
     background-color: var(--white);
     box-shadow: 0px 4px 10px #AAAAAA;
     border-radius: 6px;
 
     width: 340px;
 
-    position: fixed;
-    top: 5rem;
     justify-self: center;
-    z-index: 10;
 
     display: grid;
     justify-items: center;
     padding: 55px 15px 40px;
     gap: 45px;
 
+    position: relative;
+
     display: none;
 }
 
-.booking_message::before{
+.booking_message_box::before{
     content: "";
     width: 100%;
     height: 10px;
