--- a/static/CSS/booking.css
+++ b/static/CSS/booking.css
@@ -67,7 +67,7 @@ main{
 }
 
 .going_button{
-    width: 180px;
+    width: 200px;
     padding: 15px 20px;
     justify-self: center;
 
@@ -77,6 +77,7 @@ main{
     border-radius: 5px;
     letter-spacing: 3px;
     cursor: pointer;
+    font-size: 16px;
 
     margin-bottom: 45px;
 }
@@ -237,26 +238,35 @@ input{
 }
 
 .check_delete{
+    width: 100%;
+
+    position: fixed;
+    top: 5rem;
+    z-index: 10;
+
+    display: grid;
+}
+
+.check_delete_box{
     background-color: var(--white);
     box-shadow: 0px 4px 10px #AAAAAA;
     border-radius: 6px;
 
     width: 340px;
 
-    position: fixed;
-    top: 5rem;
     justify-self: center;
-    z-index: 10;
 
     display: grid;
     justify-items: center;
     padding: 55px 15px 40px;
     gap: 45px;
 
+    position: relative;
+
     display: none;
 }
 
-.check_delete::before{
+.check_delete_box::before{
     content: "";
     width: 100%;
     height: 10px;
