fix: get data ( index → key-value )

--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -48,7 +48,7 @@
                     <p>以此景點為中心的一日行程，帶您探索城市角落故事</p>
                     <div class="date">
                         <h4>選擇日期：</h4>
-                        <input type="date" id="date_input" name="" value="">
+                        <input type="date" id="date_input" name="date">
                     </div>
                     <div class="time" id="time">
                         <h4>選擇時間： </h4>
