--- a/templates/base.html
+++ b/templates/base.html
@@ -33,14 +33,22 @@
                         <div class="top_link_booking">預定行程</div>
                         <div class="top_link_login">登入/註冊</div>
                         <div class="top_name"></div>
+                        <div class="top_link_member_history">
+                            <a class="member_link" href="/member">會員中心</a>
+                            <a class="history_link" href="/history">歷史訂單</a>
+                        </div>
                         <div class="top_link_logout">( 登出 )</div>
                     </div>
+                    
                     <div class="side_navbar">
                         <img class="side_logo" src="/images/hamburger.svg" alt="">
                         <div class="side_link">
                             <div class="side_name"></div>
+                            
                             <div class="side_link_booking">預定行程</div>
                             <div class="side_link_login">登入/註冊</div>
+                            <a class="side_link_history" href="/history">歷史訂單</a>
+                            <a class="side_link_member" href="/member">會員中心</a>
                             <div class="side_link_logout"></div>
                         </div>
                     </div>
